force-app/main/default/objects/PF_Project_Item__c/PF_Project_Item__c.object-meta.xml
<CustomObject>
    <description>This is where project items (risks, issues, questions, decisions) will be captured within the ProjectForce application.</description>
    <label>Project Item</label>
    <nameField>
        <label>Project Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>