force-app/main/default/objects/PF_Project_Item__c/fields/PF_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>PF_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the person who will be responsible to manage this project item to closure.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Risk_and_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>