force-app/main/default/objects/PF_Project_Item__c/fields/PF_Epic__c.field-meta.xml
<CustomField>
    <fullName>PF_Epic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the related epic that this project item impacts.</inlineHelpText>
    <label>CJ</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PF_Epic__c.PF_Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.PF_Product__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>PF_Epic__c</referenceTo>
    <relationshipLabel>Project Items</relationshipLabel>
    <relationshipName>Project_Items</relationshipName>
    <type>Lookup</type>
</CustomField>