force-app/main/default/objects/PF_Project_Item__c/fields/PF_FW_Architectural_Decision__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_Architectural_Decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the related AD that this project item impacts.</description>
    <inlineHelpText>Select the related AD that this project item impacts.</inlineHelpText>
    <label>Architectural Decision</label>
    <referenceTo>PF_FW_Architectural_Decision__c</referenceTo>
    <relationshipLabel>Project Items</relationshipLabel>
    <relationshipName>Project_Items</relationshipName>
    <type>Lookup</type>
</CustomField>