force-app/main/default/objects/PF_Project_Item__c/fields/PF_Identified_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Identified_Date__c</fullName>
    <inlineHelpText>Select the date in which this project item was identified.</inlineHelpText>
    <label>Identified Date</label>
    <type>Date</type>
</CustomField>