force-app/main/default/objects/PF_Project_Item__c/fields/PF_Impact__c.field-meta.xml
<CustomField>
    <fullName>PF_Impact__c</fullName>
    <inlineHelpText>Select the level of impact for the project item.</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <color>#F3D904</color>
                <label>Critical</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#A845DC</color>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#E27001</color>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#78C953</color>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>