force-app/main/default/objects/PF_Project_Item__c/fields/PF_Internal_External__c.field-meta.xml
<CustomField>
    <fullName>PF_Internal_External__c</fullName>
    <label>Internal / External</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>