force-app/main/default/objects/PF_Project_Item__c/fields/PF_Probability__c.field-meta.xml
<CustomField>
    <fullName>PF_Probability__c</fullName>
    <inlineHelpText>Select the probability for the project item.</inlineHelpText>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Realized</fullName>
                <color>#A53711</color>
                <label>Realized</label>
            </value>
            <value>
                <fullName>Likely</fullName>
                <color>#A845DC</color>
                <label>Likely</label>
            </value>
            <value>
                <fullName>Moderate</fullName>
                <color>#E27001</color>
                <default>true</default>
                <label>Moderate</label>
            </value>
            <value>
                <fullName>Unlikely</fullName>
                <color>#78C953</color>
                <label>Unlikely</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>