force-app/main/default/objects/PF_Project_Item__c/fields/PF_Product__c.field-meta.xml
<CustomField>
    <fullName>PF_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the related product which this project item impacts.</inlineHelpText>
    <label>Product</label>
    <referenceTo>PF_Product__c</referenceTo>
    <relationshipLabel>Project Items</relationshipLabel>
    <relationshipName>Project_Items</relationshipName>
    <type>Lookup</type>
</CustomField>