force-app/main/default/objects/PF_Project_Item__c/fields/PF_Project__c.field-meta.xml
<CustomField>
    <fullName>PF_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the related project name that this project item impacts.</inlineHelpText>
    <label>Project</label>
    <referenceTo>PF_Project__c</referenceTo>
    <relationshipLabel>Project Items</relationshipLabel>
    <relationshipName>Project_Items</relationshipName>
    <type>Lookup</type>
</CustomField>