force-app/main/default/objects/PF_Project_Item__c/fields/PF_Project_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>PF_Project_Item_Description__c</fullName>
    <inlineHelpText>(Assumptions &amp; Dependencies) - Describe implications &amp; constraints
(Open Question)  - Describe question to be answered
(Key Decision) - Document key decision
(Action Item) - Describe the required action
(Risks &amp; Issues) - Describe risks or issues</inlineHelpText>
    <label>Project Item Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>