force-app/main/default/objects/PF_Project_Item__c/fields/PF_Resolution_Response__c.field-meta.xml
<CustomField>
    <fullName>PF_Resolution_Response__c</fullName>
    <inlineHelpText>Please describe:
    (Assumptions &amp; Dependencies): Planned actions
    (Open Question): Answer
    (Decisions):  Decision(s) made
    (Action Items): Confirmed resolution or output
    (Risks &amp; Issues): Mitigation plan</inlineHelpText>
    <label>Resolution / Response</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>