force-app/main/default/objects/PF_Project_Item__c/fields/PF_Resolution_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Resolution_Response_Date__c</fullName>
    <inlineHelpText>Select the date when this project item actually was resolved.</inlineHelpText>
    <label>Resolution / Response Date</label>
    <type>Date</type>
</CustomField>