force-app/main/default/objects/PF_Project_Item__c/fields/PF_Risk_Ranking__c.field-meta.xml
<CustomField>
    <fullName>PF_Risk_Ranking__c</fullName>
    <formula>Case(PF_Impact__c,
&quot;Low&quot;, 1,
&quot;Medium&quot;, 2,
&quot;High&quot;, 3,
&quot;Critical&quot;, 4,
NULL)*

Case(PF_Probability__c,
&quot;Unlikely&quot;, 1,
&quot;Moderate&quot;, 2,
&quot;Likely&quot;, 3,
&quot;Realized&quot;, 4,
&quot;Cancelled&quot;, 0,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>