force-app/main/default/objects/PF_Project_Item__c/fields/PF_Status__c.field-meta.xml
<CustomField>
    <fullName>PF_Status__c</fullName>
    <inlineHelpText>Select the relevant status for the project item.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#78C953</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#666666</color>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>