force-app/main/default/objects/PF_Project_Item__c/fields/PF_Type__c.field-meta.xml
<CustomField>
    <fullName>PF_Type__c</fullName>
    <inlineHelpText>Select the relevant type for the project item.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assumption</fullName>
            </value>
            <value>
                <fullName>Dependency</fullName>
            </value>
            <value>
                <fullName>Open Question</fullName>
            </value>
            <value>
                <fullName>Key Decision</fullName>
            </value>
            <value>
                <fullName>Action Item</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>