force-app/main/default/objects/PF_Project_Item__c/recordTypes/PF_Project_Item.recordType-meta.xml
<RecordType>
    <fullName>PF_Project_Item</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>Project Item</label>
</RecordType>