force-app/main/default/objects/PF_Project_Item__c/validationRules/Make_Resolution_Response_Time_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Resolution_Response_Time_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(PF_Status__c, &#39;Closed&#39;),

OR( 
len(PF_Resolution_Response__c )=0,
ISNULL(PF_Resolution_Response_Date__c)
) 
)</errorConditionFormula>
    <errorMessage>Enter resolution/response and resolution/response date details when closing record.</errorMessage>
</ValidationRule>