force-app/main/default/objects/PF_Project_Item__c/validationRules/Risks_and_Issues_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Risks_and_Issues_Required_Fields</fullName>
    <active>true</active>
    <description>The impact and probability field needs to be populated when the project item type is Risks or Issues.</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(PF_Type__c, &#39;Risk&#39;),
ISPICKVAL(PF_Type__c, &#39;Issue&#39;)),
OR(
ISPICKVAL(PF_Impact__c , &quot;&quot;),
ISPICKVAL(PF_Probability__c, &quot;&quot;)
))</errorConditionFormula>
    <errorMessage>When Project Item Type is Risk or Issue, then Impact and Probability field cannot be blank.</errorMessage>
</ValidationRule>