force-app/main/default/objects/PF_Project_Item__c/listViews/PF_All_Key_Decisions.listView-meta.xml
<ListView>
    <fullName>PF_All_Key_Decisions</fullName>
    <columns>NAME</columns>
    <columns>PF_Project_Item_Number__c</columns>
    <columns>PF_Type__c</columns>
    <columns>PF_Identified_Date__c</columns>
    <columns>PF_Assigned_To__c</columns>
    <columns>PF_Impact__c</columns>
    <columns>PF_Probability__c</columns>
    <columns>PF_Risk_Ranking__c</columns>
    <columns>PF_Status__c</columns>
    <columns>PF_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PF_Type__c</field>
        <operation>equals</operation>
        <value>Key Decision</value>
    </filters>
    <label>All Key Decisions</label>
</ListView>